# GiteaForjeoMirrorSync

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
src/: config.rs  filter.rs  http.rs  main.rs  scheduler.rs  state.rs  sync.rs  target.rs
src/source/: gitbucket.rs  gitea.rs  github.rs  gitlab.rs  mod.rs
